Attempted to fix responsiveness on small phone screens after mentor feedback

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,66 @@
         width: 10vw;
     }
   }
+@media screen and (min-width: 320px) {
+    form {
+        bottom: 45vh;
+        right: 62vw;
+        height: 20vh;
+        width: 20vw;
+        text-shadow: 0.02421875em 0.02421875em black;
+    }
+    .formpart {
+        padding-top: 0.125em;
+        padding-bottom: 0.125em;
+    }
+    .footerchild {
+        padding-left: 0.125em;
+        padding-right: 0.125em;
+    }
+    .galleryimagetall {
+        margin-top: 2em;
+        max-height: 7vh;
+        max-width: 4.25vw;
+        margin-left: 3em;
+        border-radius: 0.546875em;
+    }
+    .galleryimagewide {
+        max-height: 7vh;
+        margin-left: 3em;
+        margin-top: 2em;
+    }
+    #susanochkim {
+        width: 7.5vw;
+        height: 18.75vh;
+        border-radius: 0.546875em;
+    }
+    #welcometext {
+        width: 5vw;
+        height: 6,25vh;
+        font-size: 0.3875em;
+        border-radius: 0.0625em;
+        text-shadow: 0.02421875em 0.02421875em black;
+    }
+    #clinic1 {
+        width: 7vw;
+        height: 7vh;
+    }
+    #storyboard {
+        font-size: 0.375em;
+        top: 5.285vh;
+        left: 4vw;
+        width: 5vw;
+        height: 6.25vh;
+    }
+    #infoboard {
+        width: 6.25vw;
+        height: 6.25vh;
+        top: 5vh;
+        right: 5.125vw;
+        padding-left: 1.25vw;
+        padding-bottom: 2vh;
+    }
+  }
 @media screen and (min-width: 650px) {
     .navbar a {
         float: none;
@@ -241,7 +301,7 @@ nav a {
     margin-top: 25vh;
     max-height: min-content;
     color:yellowgreen;
-    text-shadow: 1.5px 1.5px black;
+    text-shadow: 0.096875em 0,096875em black;
     background-size: contain;
     border-radius: 0.25em;
     border:4px solid rgb(41, 27, 1) ;
